--- a/dynamic-loading/package.json
+++ b/dynamic-loading/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "babel-loader": "^6.2.4",
     "babel-preset-es2015-webpack": "^6.4.1",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "webpack": "^2.1.0-beta.7",
     "webpack-dev-server": "^2.1.0-beta.0"
