--- a/extract-text/package.json
+++ b/extract-text/package.json
@@ -4,6 +4,7 @@
     "dev": "webpack-dev-server -d --progress"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.0",
     "babel-preset-react": "^6.11.1",
