--- a/common-file/package.json
+++ b/common-file/package.json
@@ -9,8 +9,7 @@
     "babel-preset-es2015": "^6.13.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "beta",
+    "glob": "^7.1.1",
     "webpack": "beta",
     "webpack-dev-server": "beta"
   }
