--- a/dynamic-loading/package.json
+++ b/dynamic-loading/package.json
@@ -9,7 +9,7 @@
     "babel-preset-es2015": "^6.13.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack": "beta",
+    "webpack-dev-server": "beta"
   }
 }
