--- a/common-file/package.json
+++ b/common-file/package.json
@@ -5,12 +5,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.13.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "glob": "^7.1.1",
-    "webpack": "beta",
-    "webpack-dev-server": "beta"
+    "webpack": "^2.x",
+    "webpack-dev-server": "^2.x"
   }
 }
