--- a/extract-text/package.json
+++ b/extract-text/package.json
@@ -5,13 +5,13 @@
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.13.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "beta",
-    "webpack": "beta",
-    "webpack-dev-server": "beta"
+    "extract-text-webpack-plugin": "^2.1.2",
+    "webpack": "^2.x",
+    "webpack-dev-server": "^2.x"
   }
 }
